# souffle

./: .gitignore  AGENTS.md  LICENSE.md  README.md  SPEC.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: release.yml
.github/workflows/: contracts.yml  e2e.yml  homebrew-bump.yml  release.yml
.serena/: project.local.yml  project.yml
scripts/: build-mcp-sidecar.sh
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/souffle-mcp/: Cargo.toml
src-tauri/souffle-mcp/src/: db.rs  main.rs  server.rs
src-tauri/src/: app_events.rs  apple_intelligence.rs  archive.rs  calendar.rs  cli.rs  clipboard.rs  commands.rs  constants.rs  debug.rs  diagnostics.rs  errors.rs  export.rs  lib.rs  lid.rs  lock_ext.rs  logging.rs  main.rs  ort_runtime.rs  permissions.rs  pill.rs  platform.rs  power.rs  settings.rs  state.rs  state_machine.rs  test_helpers.rs  thread_qos.rs  transcript.rs  tray.rs  update_check.rs
src-tauri/src/audio/: aec.rs  capture.rs  device.rs  device_watch.rs  diarize_tap.rs  feedback.rs  meeting_detect.rs  meeting_smart.rs  mixer.rs  mod.rs  output_route.rs  priority.rs  recorder.rs  resampler.rs  retention.rs  system_activity.rs  system_tap.rs
src-tauri/src/calendar/: mod.rs  scheduler.rs
src-tauri/src/commands/: audio.rs  calendar.rs  data.rs  diagnostics.rs  dictation.rs  dictionary.rs  mcp.rs  meetings.rs  mod.rs  model.rs  permissions.rs  pill.rs  settings.rs  speakers.rs  transcription.rs
src-tauri/src/db/: dictation.rs  dictionary.rs  meetings.rs  migrate.rs  mod.rs  schema.rs  search.rs  settings.rs  speakers.rs
src-tauri/src/diarize/: aggregate.rs  assign.rs  clustering.rs  embedding.rs  fbank.rs  mod.rs  models.rs  persist.rs  powerset.rs  segmentation.rs
src-tauri/src/engine/: kyutai.rs  mock.rs  mod.rs  parakeet.rs  whisper.rs
src-tauri/src/filter/: audio_vad.rs  mod.rs  session_terms.rs  soundex.rs  text_dictionary.rs  text_filler.rs  text_stutter.rs  text_whitespace.rs
src-tauri/src/meeting_smart/: coordinator.rs  mod.rs
src-tauri/src/models/: download.rs  mod.rs
src-tauri/src/ollama/: mod.rs
src-tauri/src/pipeline/: actor.rs  diarize_task.rs  health.rs  idle.rs  mod.rs
src-tauri/src/summary/: apple.rs  chunking.rs  extract.rs  mod.rs  ollama.rs  polish.rs  prompts.rs  reduce.rs  templates.rs
src-tauri/swift/: apple_intelligence.swift  apple_intelligence_bridge.h  apple_intelligence_stub.swift
src-tauri/tests/: app_flows.rs  mcp_sidecar_contract.rs
src-tauri/tests/fixtures/: paragraph_grouping.json
src/lib/: bootstrap.ts
src/lib/api/: calendar.ts  data.test.ts  data.ts  diagnostics.test.ts  diagnostics.ts  dictation.ts  dictionary.ts  generated.test.ts  generated.ts  meetings.test.ts  meetings.ts  ollama.ts  permissions.ts  settings.test.ts  settings.ts  speakers.ts  summary.ts  transcription.test.ts  transcription.ts
src/lib/components/: Dictation.svelte  HomeView.svelte  MeetingHistoryView.svelte  MeetingView.svelte  MeetingsView.svelte  Recordings.svelte  Settings.svelte  SettingsView.svelte  Sidebar.svelte  TabBar.svelte  TranscriptionView.svelte  Waveform.svelte
src/lib/components/ui/: Accordion.svelte  ConfirmAction.svelte  ConfirmAction.test.ts  CopyButton.svelte  EmptyState.svelte  EmptyState.test.ts  ProgressBar.svelte  SettingsField.svelte  Sheet.svelte  Spinner.svelte  StatusBanner.svelte  StatusBanner.test.ts  StatusChip.svelte  index.ts
src/lib/features/calendar/: controller.svelte.test.ts  controller.svelte.ts
src/lib/features/calendar/components/: UpcomingMeetingBanner.svelte
src/lib/features/home/: ActionHero.svelte  LiveSessionCard.svelte
src/lib/features/meeting/: audio-map.test.ts  audio-map.ts  controller.svelte.test.ts  controller.svelte.ts  history-controller.svelte.test.ts  history-controller.svelte.ts  live-transcript.svelte.test.ts  live-transcript.svelte.ts
src/lib/features/meeting/components/: DictionaryAliasPopover.svelte  MeetingAudioPlayerSection.svelte  MeetingDetail.svelte  MeetingHeaderSection.svelte  MeetingHistorySection.svelte  MeetingNotesSection.svelte  MeetingStartNudgeBanner.svelte  MeetingStructuredSummarySection.svelte  MeetingSummarySection.svelte  MeetingTranscriptSection.svelte  NewMeetingSection.svelte  SpeakerManagePopover.svelte  SpeakerManagePopover.test.ts  TranscriptWordLine.svelte
src/lib/features/onboarding/: OnboardingView.svelte  PermissionsOnboarding.svelte  WhatsNewDialog.svelte  controller.svelte.ts
src/lib/features/settings/: controller.svelte.test.ts  controller.svelte.ts  microphone-list.test.ts  microphone-list.ts
src/lib/features/settings/components/: AboutSettingsSection.svelte  AdvancedSettingsSection.svelte  AudioSettingsSection.svelte  CalendarSettingsSection.svelte  DataSettingsSection.svelte  DiagnosticsSettingsSection.svelte  DictationPolishSettingsSection.svelte  DictionarySettingsSection.svelte  FeedbackSoundsSettingsSection.svelte  (+9 more)
src/lib/features/timeline/: controller.svelte.ts  controller.test.ts
src/lib/features/transcription/: catalog.test.ts  catalog.ts  controller.svelte.test.ts  controller.svelte.ts  runtime.test.ts  runtime.ts  state.ts
src/lib/i18n/: en.json  fr.json  index.ts  parity.test.ts
src/lib/pill/: PillApp.svelte
src/lib/stores/: app.svelte.test.ts  app.svelte.ts
src/lib/test-helpers/: fixtures.ts  index.ts  paragraph-grouping.fixture.json  setup-i18n.ts  tauri-mock.ts
src/lib/types/: generated.ts  index.ts
src/lib/utils/: errors.test.ts  errors.ts  events.ts  format.test.ts  format.ts  index.ts  markdown.test.ts  markdown.ts  paragraphs.test.ts  paragraphs.ts  portal.test.ts  portal.ts  search.svelte.ts  settings.ts  speaker-color.test.ts  speaker-color.ts  speaker-label.test.ts  speaker-label.ts  theme.test.ts  theme.ts  transcript-words.test.ts  transcript-words.ts
tests/e2e/: boot.spec.ts  dictation.spec.ts  meeting.spec.ts  tauri-stub.ts
(+8 files in other folders)
