[package]
name = "souffle"
version = "0.1.0"
description = "Local speech-to-text desktop application"
authors = ["Damien Goehrig"]
edition = "2024"

[lib]
name = "souffle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "souffle"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
crossbeam-channel = "0.5"
cpal = "0.15"
rubato = "0.16"
hound = "3.5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dirs-next = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
