[package]
name = "souffle"
version = "0.1.0"
description = "Local speech-to-text desktop application"
authors = ["Damien Goehrig"]
edition = "2024"

[lib]
name = "souffle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "souffle"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
specta = { version = "=2.0.0-rc.22", features = ["derive", "chrono"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
log = "0.4"
crossbeam-channel = "0.5"
cpal = "0.15"
rubato = "0.16"
hound = "3.5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dirs-next = "2"

# Phase 2: Kyutai STT inference
candle-core = { version = "0.9.1", features = ["metal"] }
candle-nn = { version = "0.9.1", features = ["metal"] }
candle-transformers = "0.9.1"
moshi = "0.6.1"
sentencepiece = "0.11.3"
hf-hub = "0.4.3"
memmap2 = "0.9"
safetensors = "0.7"
reqwest = { version = "0.12", features = ["stream", "blocking"] }
futures-util = "0.3"
sha2 = "0.10"

# Phase 6: Whisper engine via whisper.cpp
whisper-rs = { version = "0.16", features = ["metal", "tracing_backend"] }

# Phase 4: SQLite unified storage
rusqlite = { version = "0.33", features = ["bundled-full"] }

# Pipeline quality filters + Parakeet (all share the bundled ONNX Runtime
# dylib via ort load-dynamic — never link onnxruntime statically here, its
# protobuf copy corrupts sentencepiece's; see commit 508f3a4)
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false, features = ["load-dynamic"] }
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic"] }
parakeet-rs = { version = "=0.3.6", default-features = false, features = ["load-dynamic"] }
strsim = "0.11"
regex = "1"

# Phase 3: Clipboard/paste + Ollama
arboard = "3"
enigo = { version = "0.3", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
