[workspace]
members = [".", "souffle-mcp"]

[package]
name = "souffle"
version = "0.4.0"
description = "Local speech-to-text desktop application"
authors = ["Damien Goehrig"]
license = "GPL-3.0-or-later"
edition = "2024"

[lib]
name = "souffle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "souffle"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png", "protocol-asset"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
specta = { version = "=2.0.0-rc.22", features = ["derive", "chrono"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
# default-features off drops the `tracing-log` bridge, which would call
# log::set_logger and collide with tauri-plugin-log (one global log logger).
# Our diagnostics all use `tracing` directly, so we don't need the bridge.
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"
log = "0.4"
crossbeam-channel = "0.5"
cpal = "0.15"
rubato = "0.16"
hound = "3.5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dirs-next = "2"
libc = "0.2"
clap = { version = "4", features = ["derive"] }

# Phase 2: Kyutai STT inference
candle-core = { version = "0.9.1", features = ["metal"] }
candle-nn = { version = "0.9.1", features = ["metal"] }
candle-transformers = "0.9.1"
moshi = "0.6.1"
sentencepiece = "0.11.3"
hf-hub = "0.4.3"
memmap2 = "0.9"
safetensors = "0.7"
reqwest = { version = "0.12", features = ["stream", "blocking"] }
futures-util = "0.3"
sha2 = "0.10"

# Phase 6: Whisper engine via whisper.cpp
whisper-rs = { version = "0.16", features = ["metal", "tracing_backend"] }

# Phase 4: SQLite unified storage
rusqlite = { version = "0.33", features = ["bundled-full"] }

# Pipeline quality filters + Parakeet (all share the bundled ONNX Runtime
# dylib via ort load-dynamic — never link onnxruntime statically here, its
# protobuf copy corrupts sentencepiece's; see commit 508f3a4)
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false, features = ["load-dynamic"] }
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic"] }
parakeet-rs = { version = "=0.3.6", default-features = false, features = ["load-dynamic"] }
strsim = "0.11"
regex = "1"
# Offline speaker diarization (src-tauri/src/diarize): tensor plumbing for the
# ort sessions (already an ort dependency, pinned here to the same resolved
# version) and a pure-Rust FFT for the Kaldi-style fbank frontend feeding the
# WeSpeaker embedding model (already resolved transitively via rubato).
ndarray = "0.17"
rustfft = "6.4"

# Phase 3: Clipboard/paste + Ollama
arboard = "3"
enigo = { version = "0.3", features = ["serde"] }

# System audio capture via Core Audio process taps (macOS 14.4+) + echo cancellation
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-foundation = "0.3"
objc2-core-audio = "0.3"
objc2-core-audio-types = "0.3"
# Calendar integration (read-only EventKit access)
objc2-event-kit = "0.3"
# Sleep/wake observers (NSWorkspace notifications)
objc2-app-kit = "0.3"
ringbuf = "0.5"
sonora = "0.1"
block2 = "0.6"
dispatch2 = "0.3"

# Meeting audio recording: Opus encoding (statically linked on macOS via
# audiopus_sys — pkg-config finds a static libopus.a if present, otherwise
# audiopus_sys builds vendored libopus via cmake, but either way the result
# is statically linked, so no libopus.dylib ships in the bundle) into an Ogg
# container.
opus = "0.3"
ogg = "0.9"

[features]
# Exposes the mock transcription engine (normally `#[cfg(test)]`-only) so the
# `tests/` integration binaries — which link the lib as a normal, non-`cfg(test)`
# dependency — can use it too. Enabled automatically for `cargo test` via the
# self dev-dependency below. Must not gate anything that itself needs a
# dev-dependency (e.g. `tempfile`): dev-dependencies aren't available when the
# lib is built as a dependency, even via this self-reference.
test-support = []

[dev-dependencies]
tempfile = "3"
souffle-mcp = { path = "souffle-mcp" }
souffle = { path = ".", features = ["test-support"] }
# MockRuntime + mock_builder for driving Tauri commands in integration tests
# without a real webview.
tauri = { version = "2", features = ["test"] }

# sonora-aec3 0.1.0 (the only version published to crates.io) panics in
# `AdaptiveFirFilter::set_size_partitions` when the filter shrinks immediately
# (e.g. on an echo-path-change event after the filter grew past its initial
# size): `zero_filter(old_size, new_size, ..)` slices `old_size..new_size`,
# which is an invalid range once old_size > new_size. Fixed upstream in
# dec6a074 ("prevent panic when shrinking adaptive FIR filter", #15) but not
# yet released as a new crates.io version. Pinned to a specific commit
# (rather than a branch) so the fix is reproducible via Cargo.lock; bump this
# rev, or drop the patch entirely, once 0.1.1+ ships. Every sonora-* crate is
# patched to the same rev (not just sonora-aec3) so the whole dependency
# graph resolves to one source instead of building duplicate copies of the
# shared DSP crates (sonora-common-audio, sonora-fft, sonora-simd).
[patch.crates-io]
sonora = { git = "https://github.com/dignifiedquire/sonora", rev = "70c673606e1db8442a8ba20659b2bc7355555274" }
sonora-aec3 = { git = "https://github.com/dignifiedquire/sonora", rev = "70c673606e1db8442a8ba20659b2bc7355555274" }
sonora-agc2 = { git = "https://github.com/dignifiedquire/sonora", rev = "70c673606e1db8442a8ba20659b2bc7355555274" }
sonora-common-audio = { git = "https://github.com/dignifiedquire/sonora", rev = "70c673606e1db8442a8ba20659b2bc7355555274" }
sonora-fft = { git = "https://github.com/dignifiedquire/sonora", rev = "70c673606e1db8442a8ba20659b2bc7355555274" }
sonora-ns = { git = "https://github.com/dignifiedquire/sonora", rev = "70c673606e1db8442a8ba20659b2bc7355555274" }
sonora-simd = { git = "https://github.com/dignifiedquire/sonora", rev = "70c673606e1db8442a8ba20659b2bc7355555274" }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
# Unwind (not abort) so a panic on a pipeline worker thread can be caught at
# the thread/FFI boundary and recovered, instead of SIGABRT-ing the whole app.
# Every C->Rust callback (cpal/tap) is wrapped in catch_unwind so no panic
# unwinds across the FFI boundary (which would be UB).
panic = "unwind"
